--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -4,6 +4,13 @@
   <section id="links">
     <a href="/index.html">Home</a>
     &nbsp;
+    <a href="/KL-Team.html">unser Team</a><br><br>
+    <a href="https://www.facebook.com/Klimaentscheid-Kaiserslautern-101710896035021">Facebook</a>
+    &nbsp;
+    <a href="https://www.instagram.com/klimalautern/">Instagram</a>
+    &nbsp;
+    <a href="https://climatejustice.social/@KlimaLautern">Mastodon</a>
+    &nbsp;
     <a href="https://twitter.com/KlimaLautern">Twitter</a>
   </section>
 </section>
