--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -13,6 +13,8 @@
   <section id="links">
     <a href="/index.html">Home</a>
     &nbsp;
+    <a href="/aktionen-projekte.html">Aktionen & Projekte</a>
+    &nbsp;
     <a href="/kontakt-social-media.html">Kontakt & Social Media</a>
     &nbsp;
     <a href="/blog.html">Blog</a>
